2016-10-04  Mutsuo Saito <saito@manieth.com>

	* README.md