@@ -1,3 +1,3 @@
-SUBDIRS = src develop
+SUBDIRS = develop
 ACLOCAL_AMFLAGS = -I m4
 AM_CXXFLAGS = -O3 -Wall -Wextra -D__STDC_CONSTANT_MACROS
