@@ -1,3 +1,9 @@
 2016-10-04  Mutsuo Saito <saito@manieth.com>
 
 	* README.md
+
+2017-01-12  Mutsuo Saito <saito@manieth.com>
+
+	* Makefile.am remove src
+	* develop/Makefile.am add sample
+	* develop/sample.cpp add
